# service-fabric-rs-fork

./: Cargo.toml
crates/libs/com/: Cargo.toml
crates/libs/com/src/: lib.rs
crates/libs/com/src/Microsoft/ServiceFabric/: FabricClient.rs  FabricCommon.rs  FabricRuntime.rs  FabricTransport.rs  FabricTypes.rs  mod.rs
crates/libs/com/src/ServiceFabric/: FabricClient.rs  FabricCommon.rs  FabricRuntime.rs  FabricTransport.rs  FabricTypes.rs  mod.rs
crates/libs/comtwo/: Cargo.toml
crates/libs/comtwo/src/: lib.rs
crates/libs/comtwo/src/Microsoft/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/FabricClient/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/FabricCommon/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/FabricRuntime/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/FabricTransport/: mod.rs
crates/libs/comtwo/src/Microsoft/ServiceFabric/FabricTypes/: mod.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: lib.rs  strings.rs
crates/libs/core/src/api/: mod.rs
crates/libs/core/src/client/: query_client.rs  tests.rs
crates/libs/core/src/debug/: health_log.rs  mod.rs
crates/libs/core/src/runtime/: bridge.rs  mod.rs  stateful_bridge.rs  stateless_bridge.rs  store.rs
crates/libs/core/src/sync/: channel.rs  fut.rs  mod.rs  proxy.rs  token.rs  wait.rs
crates/libs/core/src/types/client/: mod.rs  service.rs
crates/libs/pal/: Cargo.toml
crates/libs/util/: Cargo.toml
crates/libs/util/src/: lib.rs  resolve.rs  sim.rs
crates/libs/util/src/monitoring/: producer.rs
crates/samples/client/: Cargo.toml
crates/samples/echomain-stateful/: Cargo.toml
crates/samples/echomain-stateful/src/: app.rs
crates/samples/echomain-stateful2/: Cargo.toml  README.md
crates/samples/echomain-stateful2/manifests/: ApplicationManifest.xml
crates/samples/echomain-stateful2/src/: echo.rs  statefulstore.rs
crates/samples/echomain/src/: main.rs
crates/samples/kvstore/: Cargo.toml
crates/samples/kvstore/src/: kvstore.rs
crates/samples/reflection/src/: test2.rs
crates/tools/api/src/: main.rs
docs/bug/: ReproFCDropBug.md
