[workspace]
resolver = "2"
members = [
    "crates/tools/*",
    # "crates/samples/*",
    "crates/libs/pal",
    "crates/libs/com",
    "crates/libs/comtwo",
]

[workspace.dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3",  default-features = false, features = ["fmt"]}
tokio-util = "0.7"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version = "1", features = ["full"] }
windows = {version = "0.57", features = ["implement"]}
windows-core = "0.57"
trait-variant = "0.1"
serde = "*"
serde_derive = "*"
# crates in this repo
mssf-com = { path = "./crates/libs/com" }
mssf-core = { path = "./crates/libs/core", default-features = true}


# testing code not released in crates yet
[patch.crates-io]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs.git", rev = "8ebef12cf50c71cf4b0054fbc4b74cc8c37bc72f"}
windows = { git = "https://github.com/microsoft/windows-rs.git", rev = "8ebef12cf50c71cf4b0054fbc4b74cc8c37bc72f"}
windows-core = { git = "https://github.com/microsoft/windows-rs.git", rev = "8ebef12cf50c71cf4b0054fbc4b74cc8c37bc72f"}
windows-targets = { git = "https://github.com/microsoft/windows-rs.git", rev = "8ebef12cf50c71cf4b0054fbc4b74cc8c37bc72f"}

